environments/bases/istio/patch-default-ns.yaml
---
apiVersion: v1
kind: Namespace

metadata:
  name: istio-operator

$patch: delete
