environments/bases/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

    - port:
        number: 2379 # to expose internal service via external port 2379
        name: mysql
        protocol: mysql
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-demo-backend-virtual-service
  namespace: staging

spec:
  gateways:
    - public-gateway.istio-system.svc.cluster.local
    
  hosts:
    - "*"
    # - java-demo-backend-service.staging.svc.cluster.local

  http:
    - name: "java-demo-backend"
      route:
        - destination:
            host: java-demo-backend-service.staging.svc.cluster.local
            port:
              number: 8080

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-virtual-service
  namespace: staging

spec:
  hosts:
    - "*"
    # - java-demo-database-service.staging.svc.cluster.local

  gateways:
    - public-gateway.istio-system.svc.cluster.local

  tcp:
  - match:
    - port: 3306
    route:
    - destination:
        host: java-demo-database-service.staging.svc.cluster.local
        port:
          number: 3306
